# INIADLib

./: .gitignore  LICENSE  README.md  pyproject.toml
src/iniad/: __init__.py  course.py  iniad.py  lecture.py  moocs.py  page.py  url.py
