[tool.poetry]
name = "iniad"
version = "0.0.2"
description = "INIAD関連のなんか"
license = "MIT"
authors = ["yu7400ki <yu7400ki@gmail.com>"]
readme = "README.md"
packages = [{include = "iniad", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 119
include = "\\.pyi?$"
exclude = """
(
      \\.git
    | \\.venv
    | \\**/__init__.py
)
"""

[tool.isort]
py_version = 311
profile = "black"
line_length = 119
